restore commit